# drone-suiveur-cible

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arm_controller/lib/arm_controller/: arm_node
install/arm_controller/share/arm_controller/: package.ps1  package.sh  package.xml
install/arm_controller/share/arm_controller/launch/: arm_launch.py
install/arm_controller/share/arm_controller/rviz/: arm.rviz
install/arm_gazebo/lib/arm_gazebo/: arm_node
install/arm_gazebo/share/arm_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/drone_follower/lib/drone_follower/: controller_node  follower_node  vision_node
install/drone_follower/share/drone_follower/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/drone_tracker/lib/drone_tracker/: tracker_node
install/drone_tracker/share/drone_tracker/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/: manipulator_world.sdf
src/arm_gazebo/: README.md  setup.py
src/arm_gazebo/models/arm/: model.config  model.sdf
src/arm_gazebo/models/object/: model.config  model.sdf
src/drone_follower/: drone_world.sdf  package.xml  setup.cfg  setup.py
src/drone_follower/drone_follower/: controller_node.py
src/drone_follower/launch/: sim.launch.py
src/drone_follower/worlds/: drone_world.sdf
src/drone_tracker/: package.xml  setup.py
src/drone_tracker/launch/: drone_launch.py
src/drone_tracker/worlds/: drone_world.sdf
(+7 files in other folders)
