<?xml version="1.0"?>
<package format="3">
  <name>drone_follower</name>
  <version>0.1.0</version>
  <description>Drone suiveur</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
